# fixpoint

./: .dockerignore  .editorconfig  .gitignore  .lintstagedrc.json  .pylintrc  Earthfile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docs-ci.yml  pypi-release-prod.yml  pypi-release-test.yml
db/migrations/: 20240519162756_init_schema.sql  20240519224547_initial-tables.sql  20240624012918_mem-cache-docs-and-forms.sql  20240724085904_workflow-tasks.sql  20240803113025_add_org_ids.sql
docs/: .lintstagedrc.json  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  theme.config.tsx
docs/src/pages/: _meta.json  about.mdx  agents.mdx  another.mdx  faq.mdx  framework-mode.mdx  getting-started.mdx  glossary.mdx  index.mdx  infra-mode.mdx  lego-brick-mode.mdx  library-mode.mdx  memory.mdx  modes-overview.mdx  structured-data.mdx  (+3 more)
examples/: simple_memory_and_structure.py  structured_workflow.py
examples/fastapi_chat_workflows/: client.py  server.py
githooks/: pre-commit
js/__shared__/: .eslintrc.json  .lintstagedrc.mjs  globals.css  linterhooks.mjs  tailwind-config-helpers.ts
js/dashboard/: .env.sample  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
src/fixpoint/: __init__.py  _constants.py  errors.py
tests/: supabase_test_utils.py  test_utils.py
tests/_storage/: supabase_test.py  test_sql.py
tests/agents/: agent_test.py  mock_test.py  openai_test.py  test_memgpt.py  test_openai.py
tests/cache/: disktlru_test.py  test_chat_completion_cache.py  tlru_test.py
tests/completions/: completions_test.py
tests/memory/: test_mem_storage.py  test_memgpt.py  test_memory.py
tests/models/: openai_test.py
tests/storage/: postgres_helper.py  supabase_test.py
tests/utils/: completions_test.py
tests/workflows/: test_node_state.py
(+173 files in other folders)
