[tool.poetry]
name = "fixpoint"
version = "0.1.0"
description = "Open source infra for reliable multi-step AI workflows."
authors = ["Fixpoint <team@fixpoint.co>"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]

license = "License :: OSI Approved :: Apache Software License"
readme = "README.md"
repository = "https://github.com/gofixpoint/fixpoint"
include = ["src/fixpoint/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2"
typing-extensions = ">=4.7.1"
openai = "^1.30.1"
tiktoken = "^0.7.0"
instructor = "^1.2.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.0"
pytest = ">=8.0.2"
black = ">=24"
flake8 = ">=4.0.0"
poetry = "1.8.2"
ipdb = "^0.13.13"
mypy = "^1.10.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
